src/objects/CourseMentorStudentAssignment__c.object
<CustomObject>
    <description>A course mentor was assigned to a student&apos;s specific course.</description>
    <fields>
        <fullName>AssignmentEndDate__c</fullName>
        <description>The date this assignment actually terminated. (No longer active)</description>
        <inlineHelpText>The date this assignment actually terminated. (No longer active)</inlineHelpText>
        <label>AssignmentEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssignmentStartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date of creation</description>
        <inlineHelpText>The date of creation</inlineHelpText>
        <label>AssignmentStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CourseCode__c</fullName>
        <description>Course Code of this student.</description>
        <label>Course Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>StudentAcademicCourse__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>true: this assignment is current. false: this is  a history record</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MentorPidm__c</fullName>
        <description>Pidm of Course Mentor.</description>
        <label>Mentor Pidm</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Course Mentor of this Assginment. The mentor&apos;s role should be &apos;Course Mentor&apos; or &apos;Student Mentor / Cours Mentor&apos;.</description>
        <label>Course Mentor</label>
        <referenceTo>Mentor__c</referenceTo>
        <relationshipLabel>Course Mentor Student Assignments</relationshipLabel>
        <relationshipName>CourseMentorStudentAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <externalId>true</externalId>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>student pidm</description>
        <label>PIDM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonOfAssignment__c</fullName>
        <description>The reason and event triggers this assginment.</description>
        <inlineHelpText>Planned Course Started:  If the student previously planned to start  his course(from today).
Engagement Approved:  If the student engagement checked
Previous Course Passed: If the student finished his/her course earlier.
Manual:  Manually assigned.</inlineHelpText>
        <label>Reason Of Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknow</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonOfDeassignment__c</fullName>
        <description>Reason of why terminate this assignment between CM and student</description>
        <label>ReasonOfDeassignment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <formula>StudentAcademicCourse__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StudentAcademicCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to StudentAcademicCourse record which present 1 course of 1 student in 1 term.</description>
        <label>Student Academic Course</label>
        <referenceTo>StudentAcademicCourse__c</referenceTo>
        <relationshipLabel>Course Mentor Student Assignments</relationshipLabel>
        <relationshipName>Course_Mentor_Student_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentCourseRegistration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corresponding course of this assignment.</description>
        <inlineHelpText>the course student are currently taking.</inlineHelpText>
        <label>Student Course Registration</label>
        <referenceTo>StudentCourseRegistration__c</referenceTo>
        <relationshipLabel>Course Mentor Student Assignments</relationshipLabel>
        <relationshipName>CourseMentorStudentAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Point to the student course version record of given particular course of this student</description>
        <label>Student Course Version</label>
        <referenceTo>StudentCourseVersion__c</referenceTo>
        <relationshipLabel>Course Mentor Student Assignments</relationshipLabel>
        <relationshipName>Course_Mentor_Student_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student whom the course mentor should helping with.</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CourseMentorStudentAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <description>The initial TermCode of studentCourseRegistration__c</description>
        <inlineHelpText>The initial TermCode of studentCourseRegistration__c</inlineHelpText>
        <label>TermCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Actual User of the mentor. Associate with the mentor&apos;s login account.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CourseMentorStudentAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Course Mentor Student Assignment</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>CourseCode__c</columns>
        <columns>Student__c</columns>
        <columns>Mentor__c</columns>
        <columns>StudentAcademicCourse__c</columns>
        <columns>StudentCourseRegistration__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ReasonOfAssignment__c</columns>
        <columns>ReasonOfDeassignment__c</columns>
        <columns>IsActive__c</columns>
        <columns>AssignmentStartDate__c</columns>
        <columns>AssignmentEndDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>TermCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>All_History</fullName>
        <columns>NAME</columns>
        <columns>CourseCode__c</columns>
        <columns>AssignmentStartDate__c</columns>
        <columns>AssignmentEndDate__c</columns>
        <columns>Mentor__c</columns>
        <columns>User__c</columns>
        <columns>Student__c</columns>
        <columns>ReasonOfAssignment__c</columns>
        <columns>ReasonOfDeassignment__c</columns>
        <columns>IsActive__c</columns>
        <columns>StudentCourseRegistration__c</columns>
        <columns>TermCode__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All History</label>
    </listViews>
    <nameField>
        <label>CourseMentorStudentAssignmentName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Mentor Student Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>